--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
               <th>Exercício</th>
               <th>1RM</th>
               <th>25%</th>
+              <th>35%</th>
               <th>50%</th>
               <th>60%</th>
               <th>65%</th>
@@ -359,7 +360,7 @@ const MOVES = [
   "Kettlebell Lunges"
 ];
 
-const PERC = [0.5,0.6,0.7,0.75,0.8,0.85,0.9,0.95];
+const PERC = [0.25, 0.35, 0.5, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95];
 const STORAGE_RM = "crossfit_1rm";
 let dataRm = JSON.parse(localStorage.getItem(STORAGE_RM) || "{}");
 
@@ -544,4 +545,5 @@ if (!dateEl.value) {
 
 </body>
 </html>
+
 
